[gd_scene load_steps=2 format=3 uid="uid://bi2hx1q6jg4p0"]

[ext_resource type="Script" path="res://scripts/ui/CharacterUI.gd" id="1_2s7fc"]

[node name="CharacterUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2s7fc")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Character Manager Test"
horizontal_alignment = 1

[node name="CharacterInfo" type="Label" parent="VBox"]
layout_mode = 2
text = "No character created yet"
vertical_alignment = 1

[node name="CreateButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Create Character"

[node name="AddExpButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Add Experience"
disabled = true

[node name="ImproveSkillButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Improve Random Skill"
disabled = true

[connection signal="pressed" from="VBox/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="VBox/AddExpButton" to="." method="_on_add_exp_button_pressed"]
[connection signal="pressed" from="VBox/ImproveSkillButton" to="." method="_on_improve_skill_button_pressed"]